--- a/recipes/air-fryer-meatballs.html
+++ b/recipes/air-fryer-meatballs.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Air Fryer Meatballs!</h1>
-    <img src="https://www.allrecipes.com/thmb/Dii3AZVlh-KC5PC1vMBVEbN2m9E=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/275548_AirFryerMeatballs_4x3_306-106a4d48e6c44b26ac4322409993713b.jpg" alt="Meatball picure 1" height="150">
+    <img src="https://www.allrecipes.com/thmb/Dii3AZVlh-KC5PC1vMBVEbN2m9E=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/275548_AirFryerMeatballs_4x3_306-106a4d48e6c44b26ac4322409993713b.jpg" alt="Meatball picture 1" height="150">
     
 </body>
 </html>
