--- a/recipes/air-fryer-meatballs.html
+++ b/recipes/air-fryer-meatballs.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Air Fryer Meatballs!</h1>
     <img src="https://www.allrecipes.com/thmb/Dii3AZVlh-KC5PC1vMBVEbN2m9E=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/275548_AirFryerMeatballs_4x3_306-106a4d48e6c44b26ac4322409993713b.jpg" alt="Meatball picture 1" height="150">
-    
+    <p>
+        After trying air fryer meatballs, I will never bake them in the oven again. The insides stay nice and tender while the outsides get a slight crisp on them. The best part is that you can make them ahead of time and freeze for later use. I have included those directions in the notes.
+    </p>
 </body>
 </html>
