--- a/recipes/air-fryer-meatballs.html
+++ b/recipes/air-fryer-meatballs.html
@@ -11,5 +11,14 @@
     <p>
         After trying air fryer meatballs, I will never bake them in the oven again. The insides stay nice and tender while the outsides get a slight crisp on them. The best part is that you can make them ahead of time and freeze for later use. I have included those directions in the notes.
     </p>
+    <h1>Ingredients</h1>
+    <ul>
+        <li>Meat</li>
+        <li>Cheese</li>
+        <li>Bread Crumbs</li>
+        <li>Egg</li>
+        <li>Seasoning</li>
+    </ul>
+    
 </body>
 </html>
