added the steps to make the recipe

--- a/recipes/air-fryer-meatballs.html
+++ b/recipes/air-fryer-meatballs.html
@@ -19,6 +19,12 @@
         <li>Egg</li>
         <li>Seasoning</li>
     </ul>
-    
+
+    <h1>Steps</h1>
+    <ol>
+        <li>Combine the Ingredients </li>
+        <li>Shape the mixture into balls</li>
+        <li>Air fry for 8 minutes,shake, and cook for 2 more minutes</li>
+    </ol>
 </body>
 </html>
