--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/air-fryer-meatballs.html">Recipe Title</a>
+    <a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs!</a>
 </body>
 </html>
