added second recipe to index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs!</a>
+    <a href="recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
 </body>
 </html>
