--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs!</a>
-    <a href="recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+    <ul>
+        <li><a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs!</a></li>
+        <li><a href="recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+    </ul>
 </body>
 </html>
