--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs!</a></li>
         <li><a href="recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+        <li><a href="recipes/potato-soup.html">Potato Soup</a></li>
     </ul>
 </body>
 </html>
