added div to html so i can add a border on my website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="recipe-card">
     <h1>Odin Recipes</h1>
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F1.bp.blogspot.com%2F-kTltUQzUkf4%2FWSFSRRkjEqI%2FAAAAAAAApp4%2F1QkhvLjQYhATux-NIJA4GIp4MHbzX6ZRwCLcB%2Fs1600%2F27440033-odin-wallpapers.jpg&f=1&nofb=1&ipt=10317a842b80d8d0c28467c5f2e2c4a36d402ee433c72eadd396d70dd2c1757b&ipo=images" alt="picture of odin" height="250" class="center">
     <ul>
@@ -14,5 +15,6 @@
         <li><a href="recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
         <li><a href="recipes/potato-soup.html">Potato Soup</a></li>
     </ul>
+    </div>
 </body>
 </html>
