--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="footer">
+        <p>Nick Matthews @The Odin Project</p>
+    </footer>
 </body>
 </html>
